--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Unit 5, Part 3 <!--Changed part 4 to part 3--> - Music Collection</title>
+    <meta charset="utf-8" />
+    <title>Unit 5, Part 4 - Music Collection</title>
     <script src="scripts/3-music-collection.js" charset="utf-8"></script>
   </head>
   <body>
